tests/NormalTests/paczka1/small_fuzzy/13606420.err
Error in line 1: eowvSX A909 45,6
Error in line 6: KkYQIiY A958 30,8
Error in line 3: f3EhR S493 83,9
